Expanded raindrop info display

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -15,7 +15,7 @@
         <nav id="everything">
             <ul>
             {% for raindrop in raindrops %}
-                <li>{{raindrop.title}}</li>
+                {% render "link.liquid", raindrop: raindrop %}
             {% endfor %}
             </ul>
         </nav>
