--- a/src/index.liquid
+++ b/src/index.liquid
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <meta name="generator" content="{{ eleventy.generator }}">
+    <link rel="stylesheet" href="/stylesheet.css">
 </head>
 <body>
     <header>
