First few succesful favicon displays

--- a/src/_includes/link.liquid
+++ b/src/_includes/link.liquid
@@ -1,4 +1,6 @@
 <li class="link">
+    <span>{{assetsDir}}</span>
+    <img src="assets/{{faviconDict[raindrop._id]}}" />
     <a href="{{raindrop.link}}">
         {{raindrop.title}}
         {% if raindrop.excerpt %}
