Attempts at styling

--- a/src/_includes/link.liquid
+++ b/src/_includes/link.liquid
@@ -4,7 +4,7 @@
     <img class="favicon" src="assets/{{img}}" />
     {% endif %}
     <a href="{{raindrop.link}}">
-        {{raindrop.title}}
+        <h3 class="title">{{raindrop.title}}</h3>
         {% if raindrop.excerpt %}
         <p class="description">
             {{raindrop.excerpt}}
