Added anchor links to nav headers

--- a/src/_includes/links.liquid
+++ b/src/_includes/links.liquid
@@ -1,5 +1,7 @@
 <nav id="{{id}}" class="links">
-    <h2>{{id}}</h2>
+    <a href="#{{id}}">
+        <h2>{{id}}</h2>
+    </a>
     <ul>
     {% for raindrop in raindrops %}
         {%- render "link.liquid", raindrop: raindrop, faviconDict: faviconDict -%}
