--- a/src/index.liquid
+++ b/src/index.liquid
@@ -47,6 +47,9 @@
            faviconDict: faviconDict
         %}
     </main>
+    <footer>
+        <a href="https://github.com/Denperidge/raindrop-webportal">Source code</a>
+    </footer>
     <script src="assets/index.js"></script>
 </body>
 </html>
