--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -59,6 +59,10 @@ main {
     justify-content: space-between;
     flex-wrap: wrap;
 }
+footer {
+    text-align: center;
+    padding-bottom: 10px;
+}
 
 @media screen and (orientation: portrait) {
     main {
