--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -115,6 +115,7 @@ a {
     border: 1px groove $color-3;
     border-radius: 20px;
     background-color: $color-2;
+    cursor: pointer;
     &[aria-pressed="true"] {
         color: black;
         background-color: $color-0;
