Current WIP multiple pages

--- a/src/webportal.liquid
+++ b/src/webportal.liquid
@@ -1,5 +1,7 @@
+{% assign rpCollectionName = "index" %}
 <!DOCTYPE html>
 <html lang="en">
+{% assign raindrops = raindrops[rpCollectionName] %}
 {% assign title = env.RWP_TITLE | default: "Raindrop.io Webportal" %}
 {% assign description = env.RWP_DESCRIPTION | default: "A webportal generated from a Raindrop.io collection" %}
 {% assign webportalUrl = env.RWP_BASE_URL %}
@@ -25,7 +27,7 @@
         <a class="sr-only skip-link" href="#main">Skip to main content</a>
         <h1>{{title}}</h1>
         <ul id="tags" class="tags">
-            {% for tag in tags %}
+            {% for tag in tags[rpCollectionName] %}
             <li>
                 <input id="tag-{{tag | slugify}}" type="checkbox"/>
                 {% render "taglabel.liquid", tag: tag %}
@@ -34,7 +36,7 @@
         </ul>
     </header>
     <main id="main">
-        {% for tag in tags %}
+        {% for tag in tags[rpCollectionName] %}
             {% render "links.liquid",
                id: tag,
                raindrops: raindropsByTags[tag],
