--- a/src/webportal.liquid
+++ b/src/webportal.liquid
@@ -59,6 +59,6 @@ eleventyComputed:
     <footer>
         <a href="https://github.com/Denperidge/raindrop-webportal">Source code</a>
     </footer>
-    <script src="/assets/index.js"></script>
+    <script src="/_assets/index.js"></script>
 </body>
 </html>
